--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's Take Attendance</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
     
@@ -29,7 +30,7 @@
 
         <div id="first-section">
             <div id="Roll-No-Here"></div>
-            <div style="display: flex;">
+            <div id="button-p-a">
                 <button class="class-design another-page" id="p-btn">Present</button>
                 <button class="class-design another-page" id="a-btn">Absent</button>
             </div>
