--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         </div>
 
         <div id="absents-numbers">
-            Absent Roll no. are appear here
+            Absent Roll no. are appear here<br>
+            Maximum students are 75 only on each class.
         </div>
 
         <a href="index.html"><button id="go-to-first-page" class="class-design another-page">Take Another Class</button></a>
