--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
             Absent Roll no. are appear here<br>
             Maximum students are 75 only on each class.
         </div>
-
-        <a href="index.html"><button id="go-to-first-page" class="class-design another-page">Take Another Class</button></a>
         
+        <div style="display: flex;">
+            <a href="index.html"><button id="go-to-first-page" class="class-design another-page">Take Another Class</button></a>
+            <button id="last-step-go-back" class="class-design another-page">Go Back Last Step</button>
+        </div>
     </section>
 
     <script src="./js/main.js"></script>
