--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             Maximum students are 75 only on each class.
         </div>
         
-        <div style="display: flex;">
+        <div id="last-step-go-back-last-pan">
             <a href="index.html"><button id="go-to-first-page" class="class-design another-page">Take Another Class</button></a>
             <button id="last-step-go-back" class="class-design another-page">Go Back Last Step</button>
         </div>
