--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
         <div id="last-step-go-back-last-pan">
             <a href="index.html"><button id="go-to-first-page" class="class-design another-page">Take Another Class</button></a>
-            <button id="last-step-go-back" class="class-design another-page">Go Back Last Step</button>
+            <button id="last-step-go-back" style="margin-left: 2vh;" class="class-design another-page">Go Back Last Step</button>
         </div>
     </section>
 
